feat: add all missing endpoints
